@@ -38,6 +38,23 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<debug>true</debug>
+					<links>
+						<link>http://docs.oracle.com/javase/7/docs/api/</link>
+					</links>
+					<breakiterator>true</breakiterator>
+					<verbose>false</verbose>
+					<aggregate>true</aggregate>
+					<maxmemory>512m</maxmemory>
+					<additionalJOption>-J-Xms168m -J-Xmx512m -J-XX:PermSize=128m
+						-J-XX:NewSize=64m</additionalJOption>
+					<version>2.3</version>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
